frontend/src/components/HomePage/RecipeList/RecipeCard/RecipeCard.css
.recipe-grid {
  display: grid;
  grid-template-rows: 66% 34% ;
}

.recipe-card {
  border-radius: 4px;
  background-color: color-mix(in srgb, var(--secondary-background-color) 70%, transparent);
  height: 15rem;
  min-width: 20rem;
  width: 100%;
  align-self: center;
  overflow: hidden;
}

.recipe-pic-box {
  height: 100%;
  width: 100%;
  overflow: clip;
  display: flex;
  justify-content: center;
  align-items: center;
}

.recipe-pic {
  display: block;
  width: 100%;
  transition: 0.4s;
}

.recipe-card:hover .recipe-pic {
  transition: 0.4s;
  width: 120%;
}

.recipe-details-box {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.recipe-h1 {
  color: var(--primary-text-color);
  font-family: var(--primary-font);
  font-size: 1.5rem;
  text-align: center;
  margin: 8px;
}

.recipe-like-box {
  display: flex;
  flex-direction: row;
  align-items: center;
}

.recipe-like-heart {
  color: var(--primary-background-color);
  font-size: 2rem;
}

.recipe-likes {
  color: var(--primary-text-color);
  margin: 0;
  margin-left: 1rem;
  font-size: 1rem;
  font-family: var(--secondary-font);
}

